Fix spacing and animation issues with menu

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h2 {
 	flex-direction: column;
 	justify-content: center;
 	align-content: center;
-	margin-right: 24px;
+	margin-right: 26px;
 	padding: 8px;
 }
 
